fix : navbar was not visible on light mode

--- a/public/offcanvas-navbar.css
+++ b/public/offcanvas-navbar.css
@@ -7,6 +7,10 @@ body {
     padding-top: 56px;
 }
 
+[data-bs-theme=light] .offcanvas-collapse {
+    background-color: var(--accent);
+}
+
 @media (max-width: 991.98px) {
     .offcanvas-collapse {
         position: fixed;
